# annotated-maps

./: .gitignore  LICENSE  README.md  cmd_grand_restart.sh  cmd_rebuild.sh  count_lines.py  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: nightly.yml  pr-tests.yml  weekend.yml
backend/: CMakeLists.txt  Dockerfile  config.docker.json  config.json
backend/src/: AuditLog.cpp  AuditLog.h  ErrorResponse.h  VisibilityAuth.h  main.cpp
backend/src/controllers/: AnnotationController.cpp  AnnotationController.h  AuthController.cpp  AuthController.h  MapController.cpp  MapController.h  NodeController.cpp  NodeController.h  NodeMediaController.cpp  NodeMediaController.h  NoteController.cpp  NoteController.h  NoteGroupController.cpp  NoteGroupController.h  NoteMediaController.cpp  NoteMediaController.h  PlotController.cpp  PlotController.h  SsoController.cpp  SsoController.h  TenantController.cpp  TenantController.h  VisibilityGroupController.cpp  VisibilityGroupController.h
backend/src/filters/: JwtFilter.cpp  JwtFilter.h  RateLimitFilter.cpp  RateLimitFilter.h  TenantFilter.cpp  TenantFilter.h
backend/tests/: helpers.py  helpers.sh  run-notes-tests.py  run-tests.py  run-tests.sh  test_01_auth.py  test_01_auth.sh  test_02_filters.py  test_02_filters.sh  test_03_maps.py  test_03_maps.sh  test_04_annotations.py  test_04_annotations.sh  test_05_tenants.py  test_05_tenants.sh  test_06_rate_limit_fast.py  test_06_rate_limit_fast.sh  test_07_rate_limit_slow.py  test_07_rate_limit_slow.sh  test_08_audit.py  test_08_audit.sh  test_09_security.py  test_09_security.sh  test_10_soak.py  test_10_soak.sh  test_11_notes.py  test_12_annotation_edit_delete_move.py  test_13_note_groups.py  test_14_nodes.py  test_15_cors.py  test_16_notes.py  test_17_media.py  test_18_visibility_groups.py  test_19_node_visibility.py  test_20_node_visibility_filter.py  test_21_note_visibility.py  test_22_plots.py  test_23_tree_navigation.py  test_24_node_move.py  test_25_node_copy.py  (+1 more)
database/: run_migrations.py  run_migrations.sh  seed-local-dev.py  seed-local-dev.sh  seed-local-dev.sql
database/migrations/: 001_core_schema.sql  001_schema.sql  (+16 more)
docs/: AI-COLLABORATION-CONVENTIONS.md  DEVELOPER-GUIDE.md  REQUIREMENTS.md  SECURITY-AUDIT-2026-04-NOTES.md  SECURITY-AUDIT.md  SETUP-LOCAL-DEV.md  TESTING-BACKEND.md  TESTING-DATABASE.md  TESTING-E2E.md  TESTING-NOTES.md  flow-create-annotation.md  flow-create-map.md  flow-user-registration.md  howto-create-blank-map.md  howto-create-pixel-map.md  howto-create-wgs84-map.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: cmd_grand_restart.sh  cmd_rebuild.sh  count_lines.py  wait-for-pr-checks.sh
(+61 files in other folders)
